--- a/jascope/package.json
+++ b/jascope/package.json
@@ -2,6 +2,10 @@
   "name": "jascope",
   "version": "0.1.0",
   "private": true,
+  "engines":{
+    "node": "12.1.0",
+    "npm": "6.11.3"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
